# fuzz-tanssi-runtime

./: .gitignore  Cargo.toml  README.md  pyproject.toml  rust-toolchain  toml-maid.toml
.cargo/: config.toml
.github/workflows/: release.yml
coverage/.cargo/registry/src/index.crates.io-6f17d22bba15001f/addr2line-0.21.0/src/: function.rs.html  lazy.rs.html
coverage/.cargo/registry/src/index.crates.io-6f17d22bba15001f/adler-1.0.2/src/: index.html
coverage/.cargo/registry/src/index.crates.io-6f17d22bba15001f/ahash-0.7.8/src/: aes_hash.rs.html  convert.rs.html  fallback_hash.rs.html  lib.rs.html  random_state.rs.html  specialize.rs.html
coverage/.cargo/registry/src/index.crates.io-6f17d22bba15001f/ahash-0.8.9/src/: aes_hash.rs.html  convert.rs.html  hash_map.rs.html  lib.rs.html
coverage/.cargo/registry/src/index.crates.io-6f17d22bba15001f/aho-corasick-1.1.2/src/: automaton.rs.html
coverage/.cargo/registry/src/index.crates.io-6f17d22bba15001f/ansi_term-0.12.1/src/: ansi.rs.html  debug.rs.html  difference.rs.html  index.html  write.rs.html
coverage/.cargo/registry/src/index.crates.io-6f17d22bba15001f/anyhow-1.0.75/src/: backtrace.rs.html  chain.rs.html  ensure.rs.html  wrapper.rs.html
coverage/.cargo/registry/src/index.crates.io-6f17d22bba15001f/arrayref-0.3.7/src/: index.html
coverage/.cargo/registry/src/index.crates.io-6f17d22bba15001f/backtrace-0.3.69/src/: capture.rs.html  index.html  print.rs.html
coverage/.cargo/registry/src/index.crates.io-6f17d22bba15001f/bip39-2.0.0/src/: internal_macros.rs.html  lib.rs.html  pbkdf2.rs.html
coverage/.cargo/registry/src/index.crates.io-6f17d22bba15001f/bitcoin_hashes-0.11.0/src/: cmp.rs.html  error.rs.html  hex.rs.html  hmac.rs.html  lib.rs.html  sha256.rs.html  sha256t.rs.html  siphash24.rs.html  util.rs.html
coverage/.cargo/registry/src/index.crates.io-6f17d22bba15001f/bitflags-2.4.1/src/: index.html  public.rs.html
coverage/.cargo/registry/src/index.crates.io-6f17d22bba15001f/bitvec-1.0.1/src/: domain.rs.html  field.rs.html  index.rs.html  mem.rs.html  store.rs.html  vec.rs.html  view.rs.html
coverage/.cargo/registry/src/index.crates.io-6f17d22bba15001f/blake2-0.10.6/src/: as_bytes.rs.html  macros.rs.html
coverage/.cargo/registry/src/index.crates.io-6f17d22bba15001f/blake2b_simd-1.0.2/src/: avx2.rs.html  index.html  sse41.rs.html
coverage/.cargo/registry/src/index.crates.io-6f17d22bba15001f/block-buffer-0.10.4/src/: index.html
coverage/.cargo/registry/src/index.crates.io-6f17d22bba15001f/block-buffer-0.9.0/src/: index.html
coverage/.cargo/registry/src/index.crates.io-6f17d22bba15001f/bounded-collections-0.1.9/src/: bounded_btree_set.rs.html  bounded_vec.rs.html  index.html  lib.rs.html  weak_bounded_vec.rs.html
coverage/.cargo/registry/src/index.crates.io-6f17d22bba15001f/bounded-vec-0.7.1/src/: index.html
coverage/.cargo/registry/src/index.crates.io-6f17d22bba15001f/bs58-0.5.0/src/: decode.rs.html  encode.rs.html  index.html
coverage/.cargo/registry/src/index.crates.io-6f17d22bba15001f/byte-slice-cast-1.2.2/src/: lib.rs.html
coverage/.cargo/registry/src/index.crates.io-6f17d22bba15001f/byteorder-1.5.0/src/: lib.rs.html
coverage/fuzz_raw/: coverage.json  index.html
coverage/fuzz_raw/projects/fuzz-tanssi-runtime/fuzz/fuzz_targets/: index.html
coverage/fuzz_starlight/: coverage.json  index.html
coverage/fuzz_starlight/projects/fuzz-tanssi-runtime/fuzz/fuzz_targets/: fuzz_starlight_coverage.rs.html  index.html
coverage/projects/fuzz-tanssi-runtime/fuzz/fuzz_targets/: fuzz_raw_coverage.rs.html
coverage/projects/tanssi/pallets/author-noting/src/: index.html  lib.rs.html  weights.rs.html
coverage/projects/tanssi/pallets/collator-assignment/src/: lib.rs.html  weights.rs.html
coverage/projects/tanssi/pallets/configuration/src/: index.html  weights.rs.html
coverage/projects/tanssi/pallets/data-preservers/src/: index.html
coverage/projects/tanssi/pallets/pooled-staking/src/: candidate.rs.html  pools.rs.html  weights.rs.html
coverage/projects/tanssi/pallets/registrar/src/: lib.rs.html
coverage/projects/tanssi/pallets/services-payment/src/: lib.rs.html
coverage/projects/tanssi/primitives/author-noting-inherent/src/: index.html
coverage/projects/tanssi/primitives/consensus/src/: lib.rs.html
coverage/projects/tanssi/primitives/container-chain-genesis-data/src/: index.html  lib.rs.html
coverage/projects/tanssi/primitives/maths/src/: lib.rs.html
coverage/projects/tanssi/primitives/traits/src/: index.html  lib.rs.html
coverage/projects/tanssi/runtime/common/src/: migrations.rs.html
coverage/projects/tanssi/runtime/dancebox/src/: lib.rs.html  xcm_config.rs.html
coverage/projects/tanssi/runtime/flashbox/src/: lib.rs.html
crates/externalities-without-storage-root/: Cargo.toml
crates/externalities-without-storage-root/src/: lib.rs
crates/simple-backend-read-only/: Cargo.toml
crates/simple-backend-read-only/src/: lib.rs
docs/: snapshots.md
fuzz/: Cargo.toml  run_coverage.py
fuzz/fuzz_targets/: coverage.rs  fuzz_flashbox_raw.rs  fuzz_raw.rs  fuzz_raw_coverage.rs  fuzz_starlight.rs  fuzz_starlight_coverage.rs  fuzz_starlight_decode_calls.rs  fuzz_starlight_deposits.rs  fuzz_starlight_live.rs  fuzz_starlight_live_oneblock.rs  fuzz_starlight_live_oneblock_events.rs  xcm_v4_encoding.rs
fuzzers/fuzz-dancelight/: Cargo.toml
fuzzers/fuzz-dancelight/fuzz/: Cargo.toml
fuzzers/fuzz-dancelight/fuzz-dancelight-cli/: Cargo.toml
fuzzers/fuzz-dancelight/fuzz-dancelight-cli/src/: coverage.rs  main.rs
fuzzers/fuzz-dancelight/fuzz/fuzz_targets/: fuzz_decode_calls.rs  fuzz_live_oneblock.rs  fuzz_zombie.rs
fuzzers/fuzz-dancelight/src/: create_storage.rs  event_tracer.rs  extr_tracer.rs  genesis.rs  lib.rs  metadata.rs  mutators.rs  read_snapshot.rs  simple_backend.rs  storage_tracer.rs  without_storage_root.rs
patches/polkadot-sdk/: 0001-disable-debug_assert-for-fuzzing.patch
scripts/: copy_corpus.py  create-snapshot.py  create_snapshot.py  create_starlight_fuzzers.py  generate_traces.py  run_coverage.py  setup_worktrees.py
snapshots/: empty-chain-spec.json
(+8491 files in other folders)
