[workspace]
default-members = [
	"fuzzers/*",
]
members = [
	"fuzzers/*",
	"fuzzers/fuzz-dancelight/fuzz",
	"fuzzers/fuzz-dancelight/fuzz-dancelight-cli",
	"fuzzers/fuzz-starlight/fuzz",
	"fuzzers/fuzz-starlight/fuzz-starlight-cli",
]
resolver = "2"

[workspace.package]
authors = [ "Tomasz Polaczyk" ]
repository = "https://github.com/tmpolaczyk/fuzz-tanssi-runtime"

[workspace.dependencies]
fuzz-dancelight = { path = "fuzzers/fuzz-dancelight" }
fuzz-starlight = { path = "fuzzers/fuzz-starlight" }

dancelight-runtime = { path = "../tanssi/chains/orchestrator-relays/runtime/dancelight", default-features = false }
dancelight-runtime-constants = { path = "../tanssi/chains/orchestrator-relays/runtime/dancelight/constants/", default-features = false }
starlight-runtime = { path = "../tanssi/chains/orchestrator-relays/runtime/starlight", default-features = false }
starlight-runtime-constants = { path = "../tanssi/chains/orchestrator-relays/runtime/starlight/constants/", default-features = false }
pallet-configuration = { path = "../tanssi/pallets/configuration", default-features = false }
tp-traits = { path = "../tanssi/primitives/traits", default-features = false }

cumulus-primitives-core = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-stable2503", default-features = false }
frame-support = { git = "https://github.com/moondance-labs/polkadot-sdk.git", branch = "tanssi-polkadot-stable2503", default-features = false }
frame-system = { git = "https://github.com/moondance-labs/polkadot-sdk.git", branch = "tanssi-polkadot-stable2503", default-features = false }
nimbus-primitives = { git = "https://github.com/moondance-labs/moonkit", branch = "tanssi-polkadot-stable2503", default-features = false }
pallet-balances = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-stable2503", default-features = false }
pallet-timestamp = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-stable2503", default-features = false }
polkadot-core-primitives = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-stable2503", default-features = false }
primitives = { package = "polkadot-primitives", git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-stable2503", default-features = false }
runtime-common = { package = "polkadot-runtime-common", git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-stable2503", default-features = false }
runtime-parachains = { package = "polkadot-runtime-parachains", git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-stable2503", default-features = false }
sc-tracing = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-stable2503" }
sp-consensus = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-stable2503", default-features = false }
sp-consensus-aura = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-stable2503", default-features = false }
sp-consensus-babe = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-stable2503", default-features = false }
sp-consensus-slots = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-stable2503", default-features = false }
sp-core = { git = "https://github.com/moondance-labs/polkadot-sdk.git", branch = "tanssi-polkadot-stable2503", default-features = false }
sp-externalities = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-stable2503", default-features = false }
sp-inherents = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-stable2503", default-features = false }
sp-io = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-stable2503", default-features = false }
sp-runtime = { git = "https://github.com/moondance-labs/polkadot-sdk.git", branch = "tanssi-polkadot-stable2503", default-features = false }
sp-state-machine = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-stable2503", default-features = false }
sp-storage = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-stable2503", default-features = false }
sp-transaction-storage-proof = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-stable2503", default-features = false }
sp-trie = { git = "https://github.com/moondance-labs/polkadot-sdk.git", branch = "tanssi-polkadot-stable2503", default-features = false }

dp-container-chain-genesis-data = { git = "https://github.com/moondance-labs/dancekit", branch = "tanssi-polkadot-stable2503", default-features = false }
dp-core = { git = "https://github.com/moondance-labs/dancekit", branch = "tanssi-polkadot-stable2503", default-features = false, features = [ "std" ] }
test-relay-sproof-builder = { git = "https://github.com/moondance-labs/dancekit", branch = "tanssi-polkadot-stable2503", default-features = false }

bitvec = { version = "1.0.1", default-features = false, features = [ "alloc" ] }
frame-metadata = "16"
futures = "0.3.1"
hash-db = { version = "0.16.0", default-features = false }
hex = "0.4.3"
include_dir = "0.7.3"
itertools = "0.10.5"
lazy_static = "1.4.0"
tokio = "1"
libfuzzer-sys = { version = "0.4" }
log = { version = "0.4.21", default-features = false }
parity-scale-codec = { version = "3.7.5", default-features = false, features = [ "derive", "max-encoded-len" ] }
# quinn-proto uses cfg(fuzzing) to enable some additional code, but that code does not compile if we don't explicitly enable
# the arbitrary feature. So add it as a dependency here, even though it is actually a dependency of some dependency
quinn-proto = { version = "0.9.6", features = [ "arbitrary" ] }
rand = "0.9.0"
scale-info = "2.11.5"
scale-value = "0.18.0"
serde = { version = "1.0.197", default-features = false }
serde_json = { version = "1", default-features = false }
trie-db = { version = "0.30" }

# cli dependencies
clap = { version = "4.5.42" }
anyhow = "1.0.98"
notify = "8.2.0"
indicatif = { version = "0.17"}
rayon = "1"

[workspace.lints.clippy]
# Deny main lint groups
complexity = { level = "deny", priority = 1 }
correctness = { level = "deny", priority = 1 }
suspicious = { level = "deny", priority = 1 }

# Add some additional lints
as_underscore = { level = "warn", priority = 2 }
cast_lossless = { level = "warn", priority = 2 }
cast_possible_wrap = { level = "warn", priority = 2 }
cast_precision_loss = { level = "warn", priority = 2 }
cast_sign_loss = { level = "warn", priority = 2 }
debug_assert_with_mut_call = { level = "warn", priority = 2 }
disallowed_methods = { level = "deny", priority = 2 }
fn_to_numeric_cast_any = { level = "warn", priority = 2 }
invalid_upcast_comparisons = { level = "warn", priority = 2 }

# Allow annoying lints and false positives
erasing_op = { level = "allow", priority = 3 }
identity_op = { level = "allow", priority = 3 }
manual_inspect = { level = "allow", priority = 3 }
too-many-arguments = { level = "allow", priority = 3 }
type_complexity = { level = "allow", priority = 3 }

# to include line number in backtraces in release mode
[profile.release]
debug = 1