[tool.poetry]
name = "fuzz-tanssi-runtime"
version = "0.1.0"
description = ""
authors = ["Tomasz Polaczyk <tmpolaczyk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pylint = "^3.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
