# Prevent this from interfering with workspaces
[workspace]
members = [ "." ]
[package]
name = "fuzz-tanssi-runtime-fuzz"
edition = "2021"
publish = false
version = "0.0.0"

[package.metadata]
cargo-fuzz = true
[[bin]]
name = "fuzz_raw"
path = "fuzz_targets/fuzz_raw.rs"
test = false
doc = false

[[bin]]
name = "fuzz_raw_coverage"
path = "fuzz_targets/fuzz_raw_coverage.rs"
test = false
doc = false

[[bin]]
name = "fuzz_flashbox_raw"
path = "fuzz_targets/fuzz_flashbox_raw.rs"
test = false
doc = false

[dependencies]
dancebox-runtime = { path = "../../tanssi/runtime/dancebox", default-features = false, features = [ "std", "try-runtime" ] }
flashbox-runtime = { path = "../../tanssi/runtime/flashbox", default-features = false, features = [ "std", "try-runtime" ] }
lazy_static = "1.4.0"
libfuzzer-sys = { version = "0.4", features = [ "arbitrary-derive" ] }
pallet-authority-assignment = { path = "../../tanssi/pallets/authority-assignment", default-features = false }
pallet-author-noting = { path = "../../tanssi/pallets/author-noting", default-features = false }
pallet-configuration = { path = "../../tanssi/pallets/configuration", default-features = false }
pallet-invulnerables = { path = "../../tanssi/pallets/invulnerables", default-features = false }
pallet-registrar = { path = "../../tanssi/pallets/registrar", default-features = false }
tp-author-noting-inherent = { path = "../../tanssi/primitives/author-noting-inherent", default-features = false }
tp-container-chain-genesis-data = { path = "../../tanssi/primitives/container-chain-genesis-data", default-features = false, features = [ "json", "std" ] }

dp-core = { git = "https://github.com/moondance-labs/dancekit", branch = "tanssi-polkadot-v1.11.0", default-features = false, features = [ "std" ] }

cumulus-client-parachain-inherent = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.11.0", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.11.0", default-features = false }
cumulus-primitives-core = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.11.0", default-features = false }
cumulus-primitives-parachain-inherent = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.11.0", default-features = false }
cumulus-test-relay-sproof-builder = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.11.0", default-features = false }
frame-metadata = "16"
frame-support = { git = "https://github.com/moondance-labs/polkadot-sdk.git", branch = "tanssi-polkadot-v1.11.0", default-features = false }
frame-system = { git = "https://github.com/moondance-labs/polkadot-sdk.git", branch = "tanssi-polkadot-v1.11.0", default-features = false }
nimbus-primitives = { git = "https://github.com/moondance-labs/moonkit", branch = "tanssi-polkadot-v1.11.0", default-features = false }
pallet-author-inherent = { git = "https://github.com/moondance-labs/moonkit", branch = "tanssi-polkadot-v1.11.0", default-features = false }
pallet-balances = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.11.0", default-features = false }
pallet-session = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.11.0", default-features = false }
pallet-timestamp = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.11.0", default-features = false }
pallet-utility = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.11.0", default-features = false }
parity-scale-codec = { version = "3.0.0", default-features = false, features = [ "derive", "max-encoded-len" ] }
sc-chain-spec = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.11.0" }
sc-client-api = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.11.0", default-features = false }
sc-service = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.11.0" }
sc-tracing = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.11.0" }
sp-consensus = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.11.0", default-features = false }
sp-consensus-aura = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.11.0", default-features = false }
sp-consensus-babe = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.11.0", default-features = false }
sp-consensus-slots = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.11.0", default-features = false }
sp-core = { git = "https://github.com/moondance-labs/polkadot-sdk.git", branch = "tanssi-polkadot-v1.11.0", default-features = false }
sp-inherents = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.11.0", default-features = false }
sp-runtime = { git = "https://github.com/moondance-labs/polkadot-sdk.git", branch = "tanssi-polkadot-v1.11.0", default-features = false }
sp-state-machine = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.11.0", default-features = false }
sp-storage = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.11.0", default-features = false }
sp-transaction-storage-proof = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.11.0", default-features = false }
staging-xcm = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-v1.11.0", default-features = false }

futures = "0.3.1"
hex = "0.4.3"
indicatif = { version = "0.17", features = [ "rayon" ] }
rayon = "1"
serde = { version = "1.0.197", default-features = false }
serde_json = { version = "1", default-features = false }
include_dir = "0.7.3"

# quinn-proto uses cfg(fuzzing) to enable some additional code, but that code does not compile if we don't explicitly enable
# the arbitrary feature. So add it as a dependency here, even though it is actually a dependency of some dependency
quinn-proto = { version = "0.9.6", features = [ "arbitrary" ]}

[dependencies.fuzz-tanssi-runtime]
path = ".."

[profile.release]
debug = 1

[[bin]]
name = "xcm_v4_encoding"
path = "fuzz_targets/xcm_v4_encoding.rs"
test = false
doc = false
bench = false
