[package]
name = "simple-backend-read-only"
authors = { workspace = true }
edition = "2024"
license = "GPL-3.0-only"
version = "0.1.0"

[dependencies]
hex-literal = { workspace = true }
sp-core = { workspace = true }
sp-state-machine = { workspace = true }
sp-storage = { workspace = true }
trie-db = { workspace = true }

[lints]
workspace = true
