[package]
name = "fuzz-dancelight"
authors = { workspace = true }
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[lints]
workspace = true

[dependencies]
dancelight-runtime = { workspace = true, features = [ "std", "try-runtime", "fast-runtime" ]}
dancelight-runtime-constants = { workspace = true, features = ["std"] }
libfuzzer-sys = { workspace = true, features = [ "arbitrary-derive" ] }
log = { workspace = true }
hex = { workspace = true }
parity-scale-codec = { workspace = true, features = [ "derive", "max-encoded-len" ] }
sp-externalities = { workspace = true }
frame-system = {workspace = true}
frame-support = {workspace = true}
scale-value = {workspace = true}
primitives = {workspace = true}
lazy_static = { workspace = true}
serde_json = {workspace = true}
rand = {workspace = true}
sp-io = {workspace = true}
sp-runtime = {workspace = true}
serde = {workspace = true}
itertools = {workspace = true}
bitvec = {workspace = true}
sp-state-machine = {workspace = true}
sc-tracing = {workspace = true}
trie-db = {workspace = true}
runtime-parachains = {workspace = true}
frame-metadata = {workspace = true}
dp-core = {workspace = true, features = ["std"]}
sp-consensus-babe = {workspace = true}
sp-trie = {workspace = true}
sp-core = {workspace = true}
sp-storage = {workspace = true}
sp-inherents = {workspace = true}
sp-consensus-aura = {workspace = true}
polkadot-core-primitives = {workspace = true}
pallet-configuration = { workspace = true}
pallet-balances = {workspace = true}
nimbus-primitives = {workspace = true}
dp-container-chain-genesis-data = {workspace = true, features = [ "json", "std" ] }
cumulus-primitives-core = {workspace = true}
scale-info = {workspace = true}