[package]
name = "fuzz-dancelight"
authors = { workspace = true }
edition = "2024"
license = "GPL-3.0-only"
version = "0.1.0"

[dependencies]
bitvec = { workspace = true }
cumulus-primitives-core = { workspace = true }
dancelight-runtime = { workspace = true, features = [ "fast-runtime", "std", "try-runtime" ] }
dancelight-runtime-constants = { workspace = true, features = [ "std" ] }
dp-container-chain-genesis-data = { workspace = true, features = [ "json", "std" ] }
dp-core = { workspace = true, features = [ "std" ] }
frame-metadata = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
libfuzzer-sys = { workspace = true, features = [ "arbitrary-derive" ] }
log = { workspace = true }
nimbus-primitives = { workspace = true }
pallet-balances = { workspace = true }
pallet-configuration = { workspace = true }
parity-scale-codec = { workspace = true, features = [ "derive", "max-encoded-len" ] }
polkadot-core-primitives = { workspace = true }
primitives = { workspace = true }
rand = { workspace = true }
runtime-parachains = { workspace = true }
sc-tracing = { workspace = true }
scale-info = { workspace = true }
scale-value = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-consensus-babe = { workspace = true }
sp-core = { workspace = true }
sp-externalities = { workspace = true }
sp-inherents = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-state-machine = { workspace = true }
sp-storage = { workspace = true }
sp-trie = { workspace = true }
trie-db = { workspace = true }

[lints]
workspace = true
