[package]
name = "fuzz-dancelight-cli"
authors = { workspace = true }
edition = "2024"
license = "GPL-3.0-only"
version = "0.1.0"

[dependencies]
fuzz-dancelight = { workspace = true }
clap = {workspace = true, features = ["derive"]}
anyhow = {workspace = true}
serde_json = {workspace = true }
scale-info = {workspace = true}
notify = {workspace = true}
indicatif = {workspace = true, features = [ "rayon" ] }
rayon = {workspace = true}
lazy_static = {workspace = true}
arbitrary = {workspace = true, features = ["derive"]}


[lints]
workspace = true
