[package]
name = "fuzz-dancelight-cli"
authors = { workspace = true }
edition = "2024"
license = "GPL-3.0-only"
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
arbitrary = { workspace = true, features = [ "derive" ] }
clap = { workspace = true, features = [ "derive" ] }
fuzz-dancelight = { workspace = true }
indicatif = { workspace = true, features = [ "rayon" ] }
lazy_static = { workspace = true }
notify = { workspace = true }
rayon = { workspace = true }
scale-info = { workspace = true }
serde_json = { workspace = true }


[lints]
workspace = true
