[package]
name = "fuzz-dancelight-fuzz"
edition = "2024"
publish = false
version = "0.0.0"

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "fuzz_live_oneblock"
path = "fuzz_targets/fuzz_live_oneblock.rs"
test = false
doc = false
bench = false
[[bin]]
name = "fuzz_zombie"
path = "fuzz_targets/fuzz_zombie.rs"
test = false
doc = false
bench = false

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.fuzz-dancelight]
path = ".."
